Changed div to article. Fixed style to avoid heading wrapping.

--- a/core/static/styles/pages/interstitial.scss
+++ b/core/static/styles/pages/interstitial.scss
@@ -4,17 +4,29 @@
 @import '../base';
 @import '../components/_breadcrumbs';
 
+article {
+  width: 50%
+}
+
+h1 {
+  white-space: nowrap;
+}
+
 ul {
   margin-bottom: $spacing-2;
 }
 
-.content {
-  width: 50%
-}
 
 // TABLET
 @media (max-width: 767px) {
-  .content {
+  article {
     width: 100%;
+  }
+}
+
+// MOBILE
+@media (max-width: 540px) {
+  h1 {
+    white-space: normal;
   }
 }
